# polybot_rust

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  docker-compose.yml  readme.md
.claude/skills/: copy-trade-engine.md  deployment-ops.md  polymarket-api-integration.md  react-dashboard.md  rust-api-server.md  rust-async-networking.md  rust-data-persistence.md  testing-strategy.md  whale-tracking.md
.github/workflows/: ci.yml
dashboard/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx
dashboard/src/components/: Layout.tsx  StatCard.tsx  StatusBadge.tsx
dashboard/src/hooks/: useWebSocket.ts
dashboard/src/pages/: Analytics.tsx  Baskets.tsx  Dashboard.tsx  Login.tsx  Positions.tsx  Settings.tsx  Signals.tsx  Trades.tsx  WhaleDetail.tsx  Whales.tsx
dashboard/src/services/: api.ts
dashboard/src/types/: index.ts
docs/: architecture.md  requirements.md
migrations/: 20250301000001_create_whales.sql  20250301000002_create_whale_trades.sql  20250301000003_create_copy_orders.sql  20250301000004_create_positions.sql  20250301000005_create_whale_baskets.sql  20250301000006_create_market_outcomes.sql  20250301000007_add_active_markets_and_position_sl_tp.sql  20260301000008_create_runtime_config.sql  20260301000009_add_clob_order_id.sql  20260301000010_add_clob_token_ids_to_active_markets.sql  20260301000011_add_slug_to_active_markets.sql  20260301000012_add_outcomes_to_active_markets.sql  20260301000013_add_peak_price_and_lower_tp.sql
src/: errors.rs  lib.rs  main.rs  metrics.rs
src/api/: auth.rs  mod.rs  router.rs  ws_types.rs
src/api/handlers/: analytics.rs  baskets.rs  config.rs  control.rs  dashboard.rs  health.rs  metrics.rs  mod.rs  positions.rs  trades.rs  whales.rs  ws.rs
src/config/: mod.rs
src/db/: basket_repo.rs  config_repo.rs  market_repo.rs  mod.rs  order_repo.rs  position_repo.rs  trade_repo.rs  whale_repo.rs
src/execution/: capital_pool.rs  copy_engine.rs  mod.rs  order_executor.rs  position_sizer.rs  risk_manager.rs
src/ingestion/: chain_listener.rs  mod.rs  pipeline.rs  ws_listener.rs
src/intelligence/: basket.rs  classifier.rs  mod.rs  scorer.rs
src/models/: basket.rs  market.rs  mod.rs  order.rs  position.rs  signal.rs  trade.rs  whale.rs
src/polymarket/: auth.rs  balance.rs  clob_client.rs  data_client.rs  gamma_client.rs  mod.rs  trading.rs  types.rs  wallet.rs
src/services/: market_discovery.rs  mod.rs  notifier.rs  order_fill_poller.rs  position_monitor.rs  resolution.rs  whale_seeder.rs  whale_trade_poller.rs
tests/: api_tests.rs  control_tests.rs  pipeline_tests.rs
tests/common/: mod.rs
